# itmo-fraud

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb
