[project]
name = "itmo-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "llvmlite>=0.44.0",
    "numpy<=2.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pyod>2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
